chang the code highlight

--- a/_config.yml
+++ b/_config.yml
@@ -28,11 +28,12 @@ encoding: utf-8
 collections:
   texts:
     output: true
-    premalink: pretty 
 
 
     # Build settings
 markdown: kramdown 
+highlight: true 
+
 redcarpet:
   extensions:
     - fenced_code_blocks
