--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: 一条没有尽头的道路，我们乐在其中。
+title: 一条没有尽头的道路，我们乐在其中
 email: xxoolltt@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
     曾经 : 单片机 - arm - FPGA - pcb - 焊板子<br>
